Audio player - added second example(audio+json) - adjusted web UI - fixes for tsconfig - structure adjustments - fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "@hooks/*": ["./hooks/*"],
       "@components/*": ["./components/*"],
       "@constants/*": ["./constants/*"],
+      "@models/*": ["./models/*"],
+      "@utils/*": ["./utils/*"],
       "@assets/*": ["./assets/*"],
       "@app/*": ["./app/*"]
     }
