--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.17",
-    "expo-av": "^15.1.7",
+    "expo-audio": "~0.4.8",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-image": "~2.3.2",
