--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "start:expo-go": "expo start",
+    "android": "expo start --android --dev-client",
+    "ios": "expo start --ios --dev-client",
     "web": "expo start --web",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -15,7 +16,28 @@
     "prepare": "husky",
     "build:web": "expo export --platform web",
     "build:android": "expo run:android --variant release",
-    "build:ios": "expo run:ios --configuration Release"
+    "build:ios": "expo run:ios --configuration Release",
+    "build:dev-android": "eas build --platform android --profile development",
+    "build:dev-ios": "eas build --platform ios --profile development",
+    "build:preview-android": "eas build --platform android --profile preview",
+    "build:preview-ios": "eas build --platform ios --profile preview",
+    "build:dev-all": "eas build --platform all --profile development",
+    "build:preview-all": "eas build --platform all --profile preview",
+    "prebuild": "expo prebuild",
+    "prebuild:clean": "rm -rf android ios && expo prebuild",
+    "prebuild:android": "expo prebuild --platform android",
+    "prebuild:ios": "expo prebuild --platform ios",
+    "rn:start": "react-native start --port 8082",
+    "rn:android": "react-native run-android --port 8082",
+    "rn:ios": "react-native run-ios --port 8082",
+    "rn:android:debug": "react-native run-android --variant debug",
+    "rn:android:release": "react-native run-android --variant release",
+    "rn:ios:debug": "react-native run-ios --configuration Debug",
+    "rn:ios:release": "react-native run-ios --configuration Release",
+    "rn:clean": "cd android && ./gradlew clean && cd ..",
+    "rn:install": "cd android && ./gradlew installDebug && cd ..",
+    "rn:install:release": "cd android && ./gradlew installRelease && cd ..",
+    "rn:setup": "npm run prebuild:android && npm run rn:install"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,md}": [
@@ -49,11 +71,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^13.6.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.4.3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.8",
     "@types/react": "~19.0.10",
+    "expo-dev-client": "^5.2.4",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^16.1.2",
