--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "prebuild:clean": "rm -rf android ios && expo prebuild",
     "prebuild:android": "expo prebuild --platform android",
     "prebuild:ios": "expo prebuild --platform ios",
-    "rn:start": "react-native start --port 8082",
-    "rn:android": "react-native run-android --port 8082",
-    "rn:ios": "react-native run-ios --port 8082",
+    "rn:start": "react-native start",
+    "rn:android": "react-native run-android",
+    "rn:ios": "react-native run-ios",
     "rn:android:debug": "react-native run-android --variant debug",
     "rn:android:release": "react-native run-android --variant release",
     "rn:ios:debug": "react-native run-ios --configuration Debug",
