readme fix+ cleared scripts

--- a/package.json
+++ b/package.json
@@ -15,29 +15,14 @@
     "format:check": "prettier --check .",
     "prepare": "husky",
     "build:web": "expo export --platform web",
-    "build:android": "expo run:android --variant release",
-    "build:ios": "expo run:ios --configuration Release",
     "build:dev-android": "eas build --platform android --profile development",
     "build:dev-ios": "eas build --platform ios --profile development",
     "build:preview-android": "eas build --platform android --profile preview",
-    "build:preview-ios": "eas build --platform ios --profile preview",
-    "build:dev-all": "eas build --platform all --profile development",
-    "build:preview-all": "eas build --platform all --profile preview",
     "prebuild": "expo prebuild",
     "prebuild:clean": "rm -rf android ios && expo prebuild",
-    "prebuild:android": "expo prebuild --platform android",
-    "prebuild:ios": "expo prebuild --platform ios",
-    "rn:start": "react-native start",
     "rn:android": "react-native run-android",
     "rn:ios": "react-native run-ios",
-    "rn:android:debug": "react-native run-android --variant debug",
-    "rn:android:release": "react-native run-android --variant release",
-    "rn:ios:debug": "react-native run-ios --configuration Debug",
-    "rn:ios:release": "react-native run-ios --configuration Release",
-    "rn:clean": "cd android && ./gradlew clean && cd ..",
-    "rn:install": "cd android && ./gradlew installDebug && cd ..",
-    "rn:install:release": "cd android && ./gradlew installRelease && cd ..",
-    "rn:setup": "npm run prebuild:android && npm run rn:install"
+    "rn:clean": "cd android && ./gradlew clean && cd .."
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,md}": [
