removed dev client+added steps in readme to use it if want

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "start:expo-go": "expo start",
-    "android": "expo start --android --dev-client",
-    "ios": "expo start --ios --dev-client",
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
+    "android:dev-client": "expo start --android --dev-client",
+    "ios:dev-client": "expo start --ios --dev-client",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -20,6 +21,7 @@
     "build:preview-android": "eas build --platform android --profile preview",
     "prebuild": "expo prebuild",
     "prebuild:clean": "rm -rf android ios && expo prebuild",
+    "rn:start": "react-native start",
     "rn:android": "react-native run-android",
     "rn:ios": "react-native run-ios",
     "rn:clean": "cd android && ./gradlew clean && cd .."
@@ -62,7 +64,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.8",
     "@types/react": "~19.0.10",
-    "expo-dev-client": "^5.2.4",
+    "babel-plugin-module-resolver": "^5.0.2",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^16.1.2",
